--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "lerna bootstrap && lerna run build"
+    "build": "lerna bootstrap && lerna run build",
+    "deploy": "lerna run deploy"
   },
   "author": "Philipp Thuerwaechter <pithu@thuerwaechter.de>",
   "license": "UNLICENSED",
