--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       - name: build
         run: |
           echo build project
+          npm install
           npm run build
 
       - name: deploy
