--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,15 @@ jobs:
 
       - name: deploy prod
         run: |
-          echo trigger prod deploy
-          git push -f origin origin/main:production
+          aws s3 sync ./packages/react/build/js s3://thuerwaechter-website/js --delete
+          aws s3 sync ./packages/react/build/css s3://thuerwaechter-website/css --delete
+          aws s3 cp ./packages/react/build/index.html s3://thuerwaechter-website/
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'eu-central-1'
+
+#      - name: deploy prod
+#        run: |
+#          echo trigger prod deploy
+#          git push -f origin origin/main:production
