--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -14,18 +14,20 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.4.0",
-    "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.4.0",
-    "@sanity/default-layout": "^2.4.0",
-    "@sanity/default-login": "^2.2.6",
-    "@sanity/desk-tool": "^2.4.0",
-    "@sanity/vision": "^2.2.6",
-    "prop-types": "^15.7",
+    "@sanity/base": "^2.36.2",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.36.2",
+    "@sanity/default-layout": "^2.36.2",
+    "@sanity/default-login": "^2.36.2",
+    "@sanity/desk-tool": "^2.36.2",
+    "@sanity/vision": "^2.36.2",
+    "npm-check-updates": "^16.14.12",
+    "prop-types": "^15.8",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@sanity/cli": "^2.4.0"
+    "@sanity/cli": "^2.36.2"
   }
 }
